jclass/snapshots/jdk-sun-nio-cs-UTF_16BE.class.snap
---
source: jclass/src/lib.rs
expression: display
---
public class sun.nio.cs.UTF_16BE extends sun.nio.cs.Unicode
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #29                      //sun/nio/cs/UTF_16BE
  super_class: #10                     //sun/nio/cs/Unicode
  interfaces: 0, fields: 0, methods: 5, attributes: 3
Constant pool:
   #1 = String             #2               // UTF-16BE
   #2 = Utf8               UTF-16BE
   #3 = Methodref          #4.#5            // sun/nio/cs/StandardCharsets.aliases_UTF_16BE:()[Ljava/lang/String;
   #4 = Class              #6               // sun/nio/cs/StandardCharsets
   #5 = NameAndType        #7:#8            // aliases_UTF_16BE:()[Ljava/lang/String;
   #6 = Utf8               sun/nio/cs/StandardCharsets
   #7 = Utf8               aliases_UTF_16BE
   #8 = Utf8               ()[Ljava/lang/String;
   #9 = Methodref          #10.#11          // sun/nio/cs/Unicode."<init>":(Ljava/lang/String;[Ljava/lang/String;)V
  #10 = Class              #12              // sun/nio/cs/Unicode
  #11 = NameAndType        #13:#14          // "<init>":(Ljava/lang/String;[Ljava/lang/String;)V
  #12 = Utf8               sun/nio/cs/Unicode
  #13 = Utf8               <init>
  #14 = Utf8               (Ljava/lang/String;[Ljava/lang/String;)V
  #15 = String             #16              // UnicodeBigUnmarked
  #16 = Utf8               UnicodeBigUnmarked
  #17 = Class              #18              // sun/nio/cs/UTF_16BE$Decoder
  #18 = Utf8               sun/nio/cs/UTF_16BE$Decoder
  #19 = Methodref          #17.#20          // sun/nio/cs/UTF_16BE$Decoder."<init>":(Ljava/nio/charset/Charset;)V
  #20 = NameAndType        #13:#21          // "<init>":(Ljava/nio/charset/Charset;)V
  #21 = Utf8               (Ljava/nio/charset/Charset;)V
  #22 = Class              #23              // sun/nio/cs/UTF_16BE$Encoder
  #23 = Utf8               sun/nio/cs/UTF_16BE$Encoder
  #24 = Methodref          #22.#20          // sun/nio/cs/UTF_16BE$Encoder."<init>":(Ljava/nio/charset/Charset;)V
  #25 = Methodref          #10.#26          // sun/nio/cs/Unicode.contains:(Ljava/nio/charset/Charset;)Z
  #26 = NameAndType        #27:#28          // contains:(Ljava/nio/charset/Charset;)Z
  #27 = Utf8               contains
  #28 = Utf8               (Ljava/nio/charset/Charset;)Z
  #29 = Class              #30              // sun/nio/cs/UTF_16BE
  #30 = Utf8               sun/nio/cs/UTF_16BE
  #31 = Utf8               ()V
  #32 = Utf8               Code
  #33 = Utf8               LineNumberTable
  #34 = Utf8               LocalVariableTable
  #35 = Utf8               this
  #36 = Utf8               Lsun/nio/cs/UTF_16BE;
  #37 = Utf8               historicalName
  #38 = Utf8               ()Ljava/lang/String;
  #39 = Utf8               newDecoder
  #40 = Utf8               ()Ljava/nio/charset/CharsetDecoder;
  #41 = Utf8               newEncoder
  #42 = Utf8               ()Ljava/nio/charset/CharsetEncoder;
  #43 = Utf8               MethodParameters
  #44 = Utf8               SourceFile
  #45 = Utf8               UTF_16BE.java
  #46 = Utf8               NestMembers
  #47 = Utf8               InnerClasses
  #48 = Utf8               Decoder
  #49 = Utf8               Encoder
{
  public sun.nio.cs.UTF_16BE();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=3, locals=1, args_size=1
         0: aload_0                 
         1: ldc           #1                  // String UTF-16BE
         3: invokestatic  #3                  // Method sun/nio/cs/StandardCharsets.aliases_UTF_16BE:()[Ljava/lang/String;
         6: invokespecial #9                  // Method sun/nio/cs/Unicode."<init>":(Ljava/lang/String;[Ljava/lang/String;)V
         9: return                  
      LineNumberTable:
        line 36: 0
        line 37: 9
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       10     0  this   Lsun/nio/cs/UTF_16BE;
  
  public java.lang.String historicalName();
    descriptor: ()Ljava/lang/String;
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: ldc           #15                 // String UnicodeBigUnmarked
         2: areturn                 
      LineNumberTable:
        line 40: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        3     0  this   Lsun/nio/cs/UTF_16BE;
  
  public java.nio.charset.CharsetDecoder newDecoder();
    descriptor: ()Ljava/nio/charset/CharsetDecoder;
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=3, locals=1, args_size=1
         0: new           #17                 // class sun/nio/cs/UTF_16BE$Decoder
         3: dup                     
         4: aload_0                 
         5: invokespecial #19                 // Method sun/nio/cs/UTF_16BE$Decoder."<init>":(Ljava/nio/charset/Charset;)V
         8: areturn                 
      LineNumberTable:
        line 44: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        9     0  this   Lsun/nio/cs/UTF_16BE;
  
  public java.nio.charset.CharsetEncoder newEncoder();
    descriptor: ()Ljava/nio/charset/CharsetEncoder;
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=3, locals=1, args_size=1
         0: new           #22                 // class sun/nio/cs/UTF_16BE$Encoder
         3: dup                     
         4: aload_0                 
         5: invokespecial #24                 // Method sun/nio/cs/UTF_16BE$Encoder."<init>":(Ljava/nio/charset/Charset;)V
         8: areturn                 
      LineNumberTable:
        line 48: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        9     0  this   Lsun/nio/cs/UTF_16BE;
  
  public boolean contains(java.nio.charset.Charset);
    descriptor: (Ljava/nio/charset/Charset;)Z
    flags: (0x1041) ACC_PUBLIC, ACC_BRIDGE, ACC_SYNTHETIC
    Code: 
      stack=2, locals=2, args_size=2
         0: aload_0                 
         1: aload_1                 
         2: invokespecial #25                 // Method sun/nio/cs/Unicode.contains:(Ljava/nio/charset/Charset;)Z
         5: ireturn                 
      LineNumberTable:
        line 32: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        6     0  this   Lsun/nio/cs/UTF_16BE;
    MethodParameters:
      Name                             Flags
      <no name>                        synthetic 
}
SourceFile: "UTF_16BE.java"
NestMembers:
  sun/nio/cs/UTF_16BE$Encoder
  sun/nio/cs/UTF_16BE$Decoder
InnerClasses:
  private static #48= #17 of #29;             // Decoder=class sun/nio/cs/UTF_16BE$Decoder of class sun/nio/cs/UTF_16BE
  private static #49= #22 of #29;             // Encoder=class sun/nio/cs/UTF_16BE$Encoder of class sun/nio/cs/UTF_16BE
